# power-grid-action-predictor

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt  visualize_data.ipynb
src/power_grid_pred/: generate_data.py  model.py  preprocess.py  visualization.py
tests/: test_generate_data.py  test_model.py  test_prepocess.py  test_preprocess.py
